# n2p2

./: .gitignore
src/: CMakeLists.txt  llvm.cmake
src/application/: CMakeLists.txt
src/interface/: CMakeLists.txt  makefile
src/interface/LAMMPS/: Makefile.lammps-extra.config.in  lammps-extra.cmake.config.in
src/libnnp/: CMakeLists.txt  version.config.h
src/libnnpif/: CMakeLists.txt
src/libnnptrain/: CMakeLists.txt
