###################################################################################################
# CMake Build System for n2p2/libnnp
###################################################################################################

###################################################################################################
# Set Source Files
file(GLOB SRC_FILES "*.cpp")
file(GLOB HDR_FILES "*.h")
###################################################################################################

###################################################################################################
# Specify Build Targets
add_library(nnp ${SRC_FILES})   # Build libnnp.X library. (Shared, pass -D BUILD_SHARED_LIBS)
install(FILES ${HDR_FILES} DESTINATION ${PROJECT_INCLUDE})   # Headers copied at install time
###################################################################################################