###################################################################################################
# CMake Build System for n2p2/libnnp
###################################################################################################

###################################################################################################
# Set Source Files
file(GLOB SRC_FILES "*.cpp")
file(GLOB HDR_FILES "*.h")
###################################################################################################

###################################################################################################
# Specify Build Targets
add_library(nnp ${SRC_FILES})
add_compile_options(${PROJECT_OPTIONS})
install(FILES ${HDR_FILES} DESTINATION ${PROJECT_INCLUDE})   # Headers copied at install time
###################################################################################################

###################################################################################################
# Find Required Package dependencies
find_package(MPI REQUIRED)
target_link_libraries(nnp MPI)
include_directories(${MPI_INCLUDE_PATH})
###################################################################################################